# py-gutenberg

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini  vscode.env
.github/workflows/: release.yml  test.yml
src/gutenberg/: __init__.py  main.py  models.py
tests/: test_gutenberg.py
